Fix on mobile

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -13,20 +13,23 @@
   right: 0;
   background-color: $white;
   box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.05);
-  height: 68px;
+  height: 48px;
   width: 100%;
 
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  flex-direction: row;
+
+  @include breakpoint-m {
+    height: 68px;
+  }
 
   span {
     @include assistive();
   }
 
   .logo {
-    flex: 0 0 auto;
-    width: 70%;
     padding: 16px 28px 13px;
     img {
       height: 20px;
@@ -36,12 +39,21 @@
     }
   }
 
+  .cta {
+    margin-left: auto;
+    margin-right: 10px;
+  }
+
   .button {
     margin-top: 15px;
+    display: none;
+    @include breakpoint-m {
+      display: block;
+    }
   }
 
   .site-menu-button {
-    padding: 10px 18px;
+    padding: 8px 18px;
     height: 100%;
     margin: 0;
     background-color: $ribbon;
